--- a/package.json
+++ b/package.json
@@ -1,38 +1,51 @@
 {
-  "name": "progetto_stage",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+   "name": "progetto_stage",
+   "version": "0.1.0",
+   "private": true,
+   "dependencies": {
+      "@arcgis/core": "^4.30.8",
+      "@testing-library/jest-dom": "^5.17.0",
+      "@testing-library/react": "^13.4.0",
+      "@testing-library/user-event": "^13.5.0",
+      "bootstrap": "^5.3.3",
+      "geolib": "^3.3.4",
+      "papaparse": "^5.4.1",
+      "react": "^18.3.1",
+      "react-bootstrap": "^2.10.4",
+      "react-dom": "^18.3.1",
+      "react-scripts": "^5.0.1",
+      "web-vitals": "^2.1.4"
+   },
+   "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject"
+   },
+   "eslintConfig": {
+      "extends": [
+         "react-app",
+         "react-app/jest"
+      ]
+   },
+   "browserslist": {
+      "production": [
+         ">0.2%",
+         "not dead",
+         "not op_mini all"
+      ],
+      "development": [
+         "last 1 chrome version",
+         "last 1 firefox version",
+         "last 1 safari version"
+      ]
+   },
+   "browser": {
+      "fs": false,
+      "path": false,
+      "os": false
+   },
+   "devDependencies": {
+      "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+   }
 }
